--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,12 +2,18 @@ body{
     background: linear-gradient(to left, blue, lightblue);
 
 }
-
+#containedr{
+    display:flex;
+    flex-direction: column;
+    justify-content: centre;
+    align-items: centre;
+}
 form{
     display: inline-block;
     text-align: left;
     border: 1px solid #ddd;
     padding:30px;
+    max-width: 400px;
     margin:10px;
     margin-top:30px;
     border-radius:5px;
